--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -5,6 +5,28 @@
 <title>Insert title here</title>
 </head>
 <body>
-TEST
+<table>
+    <thead>
+        <tr>
+            <th> User ID </th>
+            <th> Album ID </th>
+            <th> Title </th>
+            <th> Description </th>
+            <th> URL </th>
+        </tr>
+    </thead>
+    <tbody>
+	<tr th:if="${albums.empty}">
+            <td colspan="5"> No Albums Available </td>
+        </tr>
+        <tr th:each="album : ${albums}">
+            <td><span th:text="${album.userId}"> Title </span></td>
+            <td><span th:text="${album.albumId}"> Author </span></td>
+            <td><span th:text="${album.albumTitle}"> Title </span></td>
+            <td><span th:text="${album.albumDescription}"> Author </span></td>
+            <td><span th:text="${album.albumUrl}"> Title </span></td>
+        </tr>
+    </tbody>
+</table>
 </body>
 </html>
